--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.7.7</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.AmusementAce</groupId>
-	<artifactId>AmusementAce</artifactId>
+	<groupId>com.EaseAmuse</groupId>
+	<artifactId>EaseAmuse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>AmusementAce</name>
-	<description>AmusementAce</description>
+	<name>EaseAmuse</name>
+	<description>EaseAmuse - Ace Of Amusement</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
