--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8765
 
 #db configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/amuseAceDb
+spring.datasource.url=jdbc:mysql://localhost:3306/EaseAmuseDB
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
