--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8765
 #db configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/EaseAmuseDB
 spring.datasource.username=root
-spring.datasource.password=7775
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
